Thu Aug  3 18:39:10 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* MAINTAINERS, TODO: Tweeks.

Thu Aug  3 15:46:43 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO (5.1): Update.

2000-08-02  Kevin Buettner  <kevinb@redhat.com>

 	* alpha-tdep.c (alpha_extract_return_value): Protoize.

2000-08-02  Jimmy Guo  <guo@hpcleara.cup.hp.com>

	* gdbarch.sh: Add print_p field for CALL_DUMMY_BREAKPINT_OFFSET
        to be printed only if CALL_DUMMY_BREAKPOINT_OFFSET_P.

	* gdbarch.c: Regenerated.

2000-08-02  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

	* remote-vx.c (vx_add_symbols): Fix typos.

Wed Aug  2 19:15:34 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* arch-utils.h, gdbarch.c (default_register_sim_regno): New
 	function.
	* gdbarch.sh (REGISTER_SIM_REGNO): Add.
	* gdbarch.h, gdbarch.c: Regenerate.
	* remote-sim.c (REGISTER_SIM_REGNO): Delete definition.

	* config/d10v/tm-d10v.h (REGISTER_SIM_REGNO): Delete.
	* d10v-tdep.c (d10v_gdbarch_init): Update.
	(struct gdbarch_tdep): Delete member register_sim_regno.
	(d10v_register_sim_regno): Delete function.

Wed Aug  2 14:46:18 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote.c (enum packet_detect, packet_support_enums,
 	packet_support_auto, packet_enable, packet_disable): Delete.
	(show_packet_config_cmd, set_packet_config_cmd,
 	init_packet_config): Use add_set_auto_boolean_cmd.
	* TODO: Update.
	
Wed Aug  2 13:06:25 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote-udi.c (udi_xfer_inferior_memory, udi_files_info,
 	udi_kill): Update function signatures so that match target vector.
	* MAINTAINERS: Update.

Wed Aug  2 11:04:15 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Updates.

2000-08-01  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

        * gdbarch.sh: Multiarch DO_REGISTERS_INFO macro.
        * gdbarch.h, gdbarch.c: Regenerate.
        * infcmd.c (do_registers_info): Make not static and
        unconditionalize.
        * inferior.h (do_registers_info): Export.
