@@ -1,3 +1,8 @@
+Thu Aug  3 15:02:23 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* remote-mips.c (mips_expect, mips_expect_timeout, common_open,
+ 	fputs_readable): Make string pointer arguments constant.
+
 Thu Aug  3 18:39:10 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* MAINTAINERS, TODO: Tweeks.
